Robust date validation and display fixes.
Ensures DateTo is after DateFrom, DateFrom cannot be eariler than the
current time. (Events are allowed to overlap)
Dates now display AM/PM properly.

--- a/ZenithWebSite/Content/bootstrap.css
+++ b/ZenithWebSite/Content/bootstrap.css
@@ -1328,7 +1328,9 @@ mark,
   text-transform: lowercase;
 }
 .text-uppercase {
-  text-transform: uppercase;
+  text-trans
+      
+      : uppercase;
 }
 .text-capitalize {
   text-transform: capitalize;
@@ -2652,7 +2654,7 @@ input[type="search"] {
 .checkbox-inline input[type="checkbox"] {
   position: absolute;
   margin-top: 4px \9;
-  margin-left: -20px;
+  /* margin-left: -20px; */
 }
 .radio + .radio,
 .checkbox + .checkbox {
